--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
         </a>
 
         <!-- Card 6 -->
-        <a class="gallery-item" href="https://www.behance.net/gallery/166585883/3D-Stand-Project-Design" target="_blank" rel="noopener noreferrer">
-          <img src="img/project-02.png" alt="3D Stand Project Design" loading="lazy">
+        <a class="gallery-item" href="https://www.behance.net/gallery/240695495/Gym-Coffee-Bespoke-Stand" target="_blank" rel="noopener noreferrer">
+          <img src="img/project-06.png" alt="3D Stand Project Design" loading="lazy">
         </a>
 
         <!-- Card 7 -->
-        <a class="gallery-item" href="https://www.behance.net/gallery/183689009/Motion-Designer" target="_blank" rel="noopener noreferrer">
-          <img src="img/project-03.png" alt="Motion Designer" loading="lazy">
+        <a class="gallery-item" href="https://www.behance.net/gallery/140711877/The-Best-Taste-(Social-Media)" target="_blank" rel="noopener noreferrer">
+          <img src="img/project-07.png" alt="Brand design" loading="lazy">
         </a>
 
         <!-- Card 8 -->
